# abs-organisation

./: .gitignore  .markdownlint.json  CLAUDE.md  Dockerfile  Dockerfile.pyinstaller  README.md  absorg.sh  docker-compose.yml  fixes.md  pyproject.toml  updates.md
absorg/: __init__.py  __main__.py  audioinfo.py  bookdedup.py  cli.py  constants.py  cover.py  dedup.py  inference.py  logger.py  metadata.py  normalise.py  pathbuilder.py
tests/: conftest.py  test_audioinfo.py  test_bookdedup.py  test_cli.py  test_cover.py  test_dedup.py  test_inference.py  test_metadata.py  test_normalise.py  test_pathbuilder.py  test_sanitise.py
