[project]
name = "absorg"
version = "2.3.0"
description = "Organise audiobook files for Audiobookshelf"
requires-python = ">=3.11"
dependencies = ["mutagen>=1.47"]

[project.scripts]
absorg = "absorg.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
