[project]
name = "absorg"
version = "2.3.2"
description = "Organise audiobook files for Audiobookshelf"
requires-python = ">=3.11"
dependencies = ["mutagen>=1.47"]

[project.scripts]
absorg = "absorg.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
